src/ImguiSdlSharp.Native/cimgui.h


typedef struct ImVec2_t ImVec2;
typedef struct ImVec4_t ImVec4;
typedef int ImGuiDataType;       
typedef int ImGuiDir;            
typedef int ImGuiButtonFlags;       
typedef int ImGuiComboFlags;        
typedef int ImGuiSliderFlags;       
typedef void* ImTextureID;  
IM_MSVC_RUNTIME_CHECKS_OFF
typedef struct ImVec2_t
{
    float x, y;
} ImVec2;
typedef struct ImVec4_t
{
    float x, y, z, w;
} ImVec4;
CIMGUI_API void ImGui_LabelText(const char* label, const char* fmt, ...) IM_FMTARGS(2);            
CIMGUI_API void ImGui_LabelTextV(const char* label, const char* fmt, va_list args) IM_FMTLIST(2);
CIMGUI_API void ImGui_BulletText(const char* fmt, ...) IM_FMTARGS(1);                              
CIMGUI_API void ImGui_BulletTextV(const char* fmt, va_list args) IM_FMTLIST(1);
CIMGUI_API bool ImGui_Button(const char* label);                                                               
CIMGUI_API bool ImGui_ButtonEx(const char* label, ImVec2 size );                           
CIMGUI_API bool ImGui_SmallButton(const char* label);                                                          
CIMGUI_API bool ImGui_InvisibleButton(const char* str_id, ImVec2 size, ImGuiButtonFlags flags );      
CIMGUI_API bool ImGui_ArrowButton(const char* str_id, ImGuiDir dir);                                           
CIMGUI_API bool ImGui_Checkbox(const char* label, bool* v);
CIMGUI_API bool ImGui_CheckboxFlagsIntPtr(const char* label, int* flags, int flags_value);
CIMGUI_API bool ImGui_CheckboxFlagsUintPtr(const char* label, unsigned int* flags, unsigned int flags_value);
CIMGUI_API bool ImGui_RadioButton(const char* label, bool active);                                             
CIMGUI_API bool ImGui_RadioButtonIntPtr(const char* label, int* v, int v_button);                              
CIMGUI_API void ImGui_ProgressBar(float fraction, ImVec2 size_arg , const char* overlay );
CIMGUI_API void ImGui_Bullet(void);                                                                            
CIMGUI_API void ImGui_Image(ImTextureID user_texture_id, ImVec2 size);                            
CIMGUI_API void ImGui_ImageEx(ImTextureID user_texture_id, ImVec2 size, ImVec2 uv0 , ImVec2 uv1 , ImVec4 tint_col , ImVec4 border_col );
CIMGUI_API bool ImGui_ImageButton(const char* str_id, ImTextureID user_texture_id, ImVec2 size);  
CIMGUI_API bool ImGui_ImageButtonEx(const char* str_id, ImTextureID user_texture_id, ImVec2 size, ImVec2 uv0 , ImVec2 uv1 , ImVec4 bg_col , ImVec4 tint_col );
CIMGUI_API bool ImGui_BeginCombo(const char* label, const char* preview_value, ImGuiComboFlags flags );
CIMGUI_API void ImGui_EndCombo(void);                                                                                                                                      
CIMGUI_API bool ImGui_ComboChar(const char* label, int* current_item, const char*const items[], int items_count);                                                          
CIMGUI_API bool ImGui_ComboCharEx(const char* label, int* current_item, const char*const items[], int items_count, int popup_max_height_in_items );
CIMGUI_API bool ImGui_Combo(const char* label, int* current_item, const char* items_separated_by_zeros);                                                                   
CIMGUI_API bool ImGui_ComboEx(const char* label, int* current_item, const char* items_separated_by_zeros, int popup_max_height_in_items );                       
CIMGUI_API bool ImGui_ComboCallback(const char* label, int* current_item, bool (*items_getter)(void* data, int idx, const char** out_text), void* data, int items_count);  
CIMGUI_API bool ImGui_ComboCallbackEx(const char* label, int* current_item, bool (*items_getter)(void* data, int idx, const char** out_text), void* data, int items_count, int popup_max_height_in_items );
CIMGUI_API bool ImGui_DragFloat(const char* label, float* v);                                                 
CIMGUI_API bool ImGui_DragFloatEx(const char* label, float* v, float v_speed , float v_min , float v_max , const char* format , ImGuiSliderFlags flags ); 
CIMGUI_API bool ImGui_DragFloat2(const char* label, float v[2]);                                              
CIMGUI_API bool ImGui_DragFloat2Ex(const char* label, float v[2], float v_speed , float v_min , float v_max , const char* format , ImGuiSliderFlags flags );
CIMGUI_API bool ImGui_DragFloat3(const char* label, float v[3]);                                              
CIMGUI_API bool ImGui_DragFloat3Ex(const char* label, float v[3], float v_speed , float v_min , float v_max , const char* format , ImGuiSliderFlags flags );
CIMGUI_API bool ImGui_DragFloat4(const char* label, float v[4]);                                              
CIMGUI_API bool ImGui_DragFloat4Ex(const char* label, float v[4], float v_speed , float v_min , float v_max , const char* format , ImGuiSliderFlags flags );
CIMGUI_API bool ImGui_DragFloatRange2(const char* label, float* v_current_min, float* v_current_max);         
CIMGUI_API bool ImGui_DragFloatRange2Ex(const char* label, float* v_current_min, float* v_current_max, float v_speed , float v_min , float v_max , const char* format , const char* format_max , ImGuiSliderFlags flags );
CIMGUI_API bool ImGui_DragInt(const char* label, int* v);                                                     
CIMGUI_API bool ImGui_DragIntEx(const char* label, int* v, float v_speed , int v_min , int v_max , const char* format , ImGuiSliderFlags flags ); 
CIMGUI_API bool ImGui_DragInt2(const char* label, int v[2]);                                                  
CIMGUI_API bool ImGui_DragInt2Ex(const char* label, int v[2], float v_speed , int v_min , int v_max , const char* format , ImGuiSliderFlags flags );
CIMGUI_API bool ImGui_DragInt3(const char* label, int v[3]);                                                  
CIMGUI_API bool ImGui_DragInt3Ex(const char* label, int v[3], float v_speed , int v_min , int v_max , const char* format , ImGuiSliderFlags flags );
CIMGUI_API bool ImGui_DragInt4(const char* label, int v[4]);                                                  
CIMGUI_API bool ImGui_DragInt4Ex(const char* label, int v[4], float v_speed , int v_min , int v_max , const char* format , ImGuiSliderFlags flags );
CIMGUI_API bool ImGui_DragIntRange2(const char* label, int* v_current_min, int* v_current_max);               
CIMGUI_API bool ImGui_DragIntRange2Ex(const char* label, int* v_current_min, int* v_current_max, float v_speed , int v_min , int v_max , const char* format , const char* format_max , ImGuiSliderFlags flags );
CIMGUI_API bool ImGui_DragScalar(const char* label, ImGuiDataType data_type, void* p_data);                   
CIMGUI_API bool ImGui_DragScalarEx(const char* label, ImGuiDataType data_type, void* p_data, float v_speed , const void* p_min , const void* p_max , const char* format , ImGuiSliderFlags flags );
CIMGUI_API bool ImGui_DragScalarN(const char* label, ImGuiDataType data_type, void* p_data, int components);  
CIMGUI_API bool ImGui_DragScalarNEx(const char* label, ImGuiDataType data_type, void* p_data, int components, float v_speed , const void* p_min , const void* p_max , const char* format , ImGuiSliderFlags flags );
CIMGUI_API bool ImGui_SliderFloat(const char* label, float* v, float v_min, float v_max);                                                                                       
CIMGUI_API bool ImGui_SliderFloatEx(const char* label, float* v, float v_min, float v_max, const char* format , ImGuiSliderFlags flags );                
CIMGUI_API bool ImGui_ListBoxCallback(const char* label, int* current_item, bool (*items_getter)(void* data, int idx, const char** out_text), void* data, int items_count); 
CIMGUI_API bool ImGui_ListBoxCallbackEx(const char* label, int* current_item, bool (*items_getter)(void* data, int idx, const char** out_text), void* data, int items_count, int height_in_items );
CIMGUI_API void ImGui_PlotLinesCallback(const char* label, float (*values_getter)(void* data, int idx), void* data, int values_count);      
CIMGUI_API void ImGui_PlotLinesCallbackEx(const char* label, float (*values_getter)(void* data, int idx), void* data, int values_count, int values_offset , const char* overlay_text , float scale_min , float scale_max , ImVec2 graph_size );
CIMGUI_API void ImGui_PlotHistogramCallback(const char* label, float (*values_getter)(void* data, int idx), void* data, int values_count);  
CIMGUI_API void ImGui_PlotHistogramCallbackEx(const char* label, float (*values_getter)(void* data, int idx), void* data, int values_count, int values_offset , const char* overlay_text , float scale_min , float scale_max , ImVec2 graph_size );