src/ImguiSdlSharp/Native.cs


        [DllImport(ImguiLibrary, CallingConvention = CallingConvention.Cdecl)]
        public static extern void ImGui_LabelText(byte* label, byte* fmt, __arglist);

        [DllImport(ImguiLibrary, CallingConvention = CallingConvention.Cdecl)]
        public static extern void ImGui_LabelTextV(byte* label, byte* fmt, nuint /* va_list */ args);

        [DllImport(ImguiLibrary, CallingConvention = CallingConvention.Cdecl)]
        public static extern void ImGui_BulletText(byte* fmt, __arglist);

        [DllImport(ImguiLibrary, CallingConvention = CallingConvention.Cdecl)]
        public static extern void ImGui_BulletTextV(byte* fmt, nuint /* va_list */ args);

        #endregion

        #region Widgets: Main

        [DllImport(ImguiLibrary, CallingConvention = CallingConvention.Cdecl)]
        public static extern bool ImGui_Button(byte* label);

        [DllImport(ImguiLibrary, CallingConvention = CallingConvention.Cdecl)]
        public static extern bool ImGui_ButtonEx(byte* label, ImVec2 size = default);

        [DllImport(ImguiLibrary, CallingConvention = CallingConvention.Cdecl)]
        public static extern bool ImGui_SmallButton(byte* label);

        [DllImport(ImguiLibrary, CallingConvention = CallingConvention.Cdecl)]
        public static extern bool ImGui_InvisibleButton(byte* str_id, ImVec2 size, ImGuiButtonFlags flags = default);

        [DllImport(ImguiLibrary, CallingConvention = CallingConvention.Cdecl)]
        public static extern bool ImGui_ArrowButton(byte* str_id, ImGuiDir dir);

        [DllImport(ImguiLibrary, CallingConvention = CallingConvention.Cdecl)]
        public static extern bool ImGui_Checkbox(byte* label, bool* v);

        [DllImport(ImguiLibrary, CallingConvention = CallingConvention.Cdecl)]
        public static extern bool ImGui_CheckboxFlagsIntPtr(byte* label, int* flags, int flags_value);

        [DllImport(ImguiLibrary, CallingConvention = CallingConvention.Cdecl)]
        public static extern bool ImGui_CheckboxFlagsUintPtr(byte* label, uint* flags, uint flags_value);

        [DllImport(ImguiLibrary, CallingConvention = CallingConvention.Cdecl)]
        public static extern bool ImGui_RadioButton(byte* label, bool active);

        [DllImport(ImguiLibrary, CallingConvention = CallingConvention.Cdecl)]
        public static extern bool ImGui_RadioButtonIntPtr(byte* label, int* v, int v_button);

        [DllImport(ImguiLibrary, CallingConvention = CallingConvention.Cdecl)]
        public static extern void ImGui_ProgressBar(float fraction, ImVec2 size_arg /* = ImVec2(-FLT_MIN, 0) */, byte* overlay = default);

        [DllImport(ImguiLibrary, CallingConvention = CallingConvention.Cdecl)]
        public static extern void ImGui_Bullet();


        #endregion

        #region Widgets: Images

        [DllImport(ImguiLibrary, CallingConvention = CallingConvention.Cdecl)]
        public static extern void ImGui_Image(ImTextureID user_texture_id, ImVec2 size);

        [DllImport(ImguiLibrary, CallingConvention = CallingConvention.Cdecl)]
        public static extern void ImGui_ImageEx(ImTextureID user_texture_id, ImVec2 size, ImVec2 uv0 = default, ImVec2 uv1 = default /* = ImVec2(1, 1) */, ImVec4 tint_col = default /* = ImVec4(1, 1, 1, 1) */, ImVec4 border_col = default);

        [DllImport(ImguiLibrary, CallingConvention = CallingConvention.Cdecl)]
        public static extern bool ImGui_ImageButton(byte* str_id, ImTextureID user_texture_id, ImVec2 size);

        [DllImport(ImguiLibrary, CallingConvention = CallingConvention.Cdecl)]
        public static extern bool ImGui_ImageButtonEx(byte* str_id, ImTextureID user_texture_id, ImVec2 size, ImVec2 uv0 = default, ImVec2 uv1 = default /* = ImVec2(1, 1) */, ImVec4 bg_col = default, ImVec4 tint_col = default /* = ImVec4(1, 1, 1, 1) */);

        #endregion

        #region Widgets: Combo Box (Dropdown)

        [DllImport(ImguiLibrary, CallingConvention = CallingConvention.Cdecl)]
        public static extern bool ImGui_BeginCombo(byte* label, byte* preview_value, ImGuiComboFlags flags = default);

        [DllImport(ImguiLibrary, CallingConvention = CallingConvention.Cdecl)]
        public static extern void ImGui_EndCombo();

        [DllImport(ImguiLibrary, CallingConvention = CallingConvention.Cdecl)]
        public static extern bool ImGui_ComboChar(byte* label, int* current_item, byte** items, int items_count);

        [DllImport(ImguiLibrary, CallingConvention = CallingConvention.Cdecl)]
        public static extern bool ImGui_ComboCharEx(byte* label, int* current_item, byte** items, int items_count, int popup_max_height_in_items = -1);

        [DllImport(ImguiLibrary, CallingConvention = CallingConvention.Cdecl)]
        public static extern bool ImGui_Combo(byte* label, int* current_item, byte* items_separated_by_zeros);

        [DllImport(ImguiLibrary, CallingConvention = CallingConvention.Cdecl)]
        public static extern bool ImGui_ComboEx(byte* label, int* current_item, byte* items_separated_by_zeros, int popup_max_height_in_items = -1);

        [DllImport(ImguiLibrary, CallingConvention = CallingConvention.Cdecl)]
        public static extern bool ImGui_ComboCallback(byte* label, int* current_item, delegate* unmanaged[Cdecl]<void*, int, byte**, bool> items_getter, void* data, int items_count);

        [DllImport(ImguiLibrary, CallingConvention = CallingConvention.Cdecl)]
        public static extern bool ImGui_ComboCallbackEx(byte* label, int* current_item, delegate* unmanaged[Cdecl]<void*, int, byte**, bool> items_getter, void* data, int items_count, int popup_max_height_in_items = -1);

        #endregion

        #region Widgets: Drag Sliders

        [DllImport(ImguiLibrary, CallingConvention = CallingConvention.Cdecl)]
        public static extern bool ImGui_DragFloat(byte* label, float* v);

        [DllImport(ImguiLibrary, CallingConvention = CallingConvention.Cdecl)]
        public static extern bool ImGui_DragFloatEx(byte* label, float* v, float v_speed = 1.0f, float v_min = default, float v_max = default, byte* format = default /* = "%.3f" */, ImGuiSliderFlags flags = default);

        [DllImport(ImguiLibrary, CallingConvention = CallingConvention.Cdecl)]
        public static extern bool ImGui_DragFloat2(byte* label, float* v);

        [DllImport(ImguiLibrary, CallingConvention = CallingConvention.Cdecl)]
        public static extern bool ImGui_DragFloat2Ex(byte* label, float* v, float v_speed = 1.0f, float v_min = default, float v_max = default, byte* format = default /* = "%.3f" */, ImGuiSliderFlags flags = default);

        [DllImport(ImguiLibrary, CallingConvention = CallingConvention.Cdecl)]
        public static extern bool ImGui_DragFloat3(byte* label, float* v);

        [DllImport(ImguiLibrary, CallingConvention = CallingConvention.Cdecl)]
        public static extern bool ImGui_DragFloat3Ex(byte* label, float* v, float v_speed = 1.0f, float v_min = default, float v_max = default, byte* format = default /* = "%.3f" */, ImGuiSliderFlags flags = default);

        [DllImport(ImguiLibrary, CallingConvention = CallingConvention.Cdecl)]
        public static extern bool ImGui_DragFloat4(byte* label, float* v);

        [DllImport(ImguiLibrary, CallingConvention = CallingConvention.Cdecl)]
        public static extern bool ImGui_DragFloat4Ex(byte* label, float* v, float v_speed = 1.0f, float v_min = default, float v_max = default, byte* format = default /* = "%.3f" */, ImGuiSliderFlags flags = default);

        [DllImport(ImguiLibrary, CallingConvention = CallingConvention.Cdecl)]
        public static extern bool ImGui_DragFloatRange2(byte* label, float* v_current_min, float* v_current_max);

        [DllImport(ImguiLibrary, CallingConvention = CallingConvention.Cdecl)]
        public static extern bool ImGui_DragFloatRange2Ex(byte* label, float* v_current_min, float* v_current_max, float v_speed = 1.0f, float v_min = default, float v_max = default, byte* format = default /* = "%.3f" */, byte* format_max = default, ImGuiSliderFlags flags = default);

        [DllImport(ImguiLibrary, CallingConvention = CallingConvention.Cdecl)]
        public static extern bool ImGui_DragInt(byte* label, int* v);

        [DllImport(ImguiLibrary, CallingConvention = CallingConvention.Cdecl)]
        public static extern bool ImGui_DragIntEx(byte* label, int* v, float v_speed = 1.0f, int v_min = default, int v_max = default, byte* format = default /* = "%d" */, ImGuiSliderFlags flags = default);

        [DllImport(ImguiLibrary, CallingConvention = CallingConvention.Cdecl)]
        public static extern bool ImGui_DragInt2(byte* label, int* v);

        [DllImport(ImguiLibrary, CallingConvention = CallingConvention.Cdecl)]
        public static extern bool ImGui_DragInt2Ex(byte* label, int* v, float v_speed = 1.0f, int v_min = default, int v_max = default, byte* format = default /* = "%d" */, ImGuiSliderFlags flags = default);

        [DllImport(ImguiLibrary, CallingConvention = CallingConvention.Cdecl)]
        public static extern bool ImGui_DragInt3(byte* label, int* v);

        [DllImport(ImguiLibrary, CallingConvention = CallingConvention.Cdecl)]
        public static extern bool ImGui_DragInt3Ex(byte* label, int* v, float v_speed = 1.0f, int v_min = default, int v_max = default, byte* format = default /* = "%d" */, ImGuiSliderFlags flags = default);

        [DllImport(ImguiLibrary, CallingConvention = CallingConvention.Cdecl)]
        public static extern bool ImGui_DragInt4(byte* label, int* v);

        [DllImport(ImguiLibrary, CallingConvention = CallingConvention.Cdecl)]
        public static extern bool ImGui_DragInt4Ex(byte* label, int* v, float v_speed = 1.0f, int v_min = default, int v_max = default, byte* format = default /* = "%d" */, ImGuiSliderFlags flags = default);

        [DllImport(ImguiLibrary, CallingConvention = CallingConvention.Cdecl)]
        public static extern bool ImGui_DragIntRange2(byte* label, int* v_current_min, int* v_current_max);

        [DllImport(ImguiLibrary, CallingConvention = CallingConvention.Cdecl)]
        public static extern bool ImGui_DragIntRange2Ex(byte* label, int* v_current_min, int* v_current_max, float v_speed = 1.0f, int v_min = default, int v_max = default, byte* format = default /* = "%d" */, byte* format_max = default, ImGuiSliderFlags flags = default);

        [DllImport(ImguiLibrary, CallingConvention = CallingConvention.Cdecl)]
        public static extern bool ImGui_DragScalar(byte* label, ImGuiDataType data_type, void* p_data);

        [DllImport(ImguiLibrary, CallingConvention = CallingConvention.Cdecl)]
        public static extern bool ImGui_DragScalarEx(byte* label, ImGuiDataType data_type, void* p_data, float v_speed = 1.0f, void* p_min = default, void* p_max = default, byte* format = default, ImGuiSliderFlags flags = default);

        [DllImport(ImguiLibrary, CallingConvention = CallingConvention.Cdecl)]
        public static extern bool ImGui_DragScalarN(byte* label, ImGuiDataType data_type, void* p_data, int components);

        [DllImport(ImguiLibrary, CallingConvention = CallingConvention.Cdecl)]
        public static extern bool ImGui_DragScalarNEx(byte* label, ImGuiDataType data_type, void* p_data, int components, float v_speed = 1.0f, void* p_min = default, void* p_max = default, byte* format = default, ImGuiSliderFlags flags = default);

        #endregion

        #region Widgets: Regular Sliders

        [DllImport(ImguiLibrary, CallingConvention = CallingConvention.Cdecl)]
        public static extern bool ImGui_SliderFloat(byte* label, float* v, float v_min, float v_max);

        [DllImport(ImguiLibrary, CallingConvention = CallingConvention.Cdecl)]
        public static extern bool ImGui_SliderFloatEx(byte* label, float* v, float v_min, float v_max, byte* format = default /* = "%.3f" */, ImGuiSliderFlags flags = default);
